# drm-lease-manager

./: .gitreview  README.md  groups  meson.build  meson_options.txt  project.config  reviewers.config
.github/workflows/: codeql.yml
common/: log.h
drm-lease-manager/: drm-lease.h  lease-config.c  lease-config.h  lease-manager.c  lease-manager.h  lease-server.c  main.c  meson.build
drm-lease-manager/test/: lease-config-test.c  lease-manager-test.c  meson.build  test-drm-device.c  test-drm-device.h
drm-lease-manager/toml/: toml.c  toml.h
libdlmclient/: dlmclient.c
recipes/drm-lease-manager/: drm-lease-manager_git.bb
recipes/drm-lease-manager/drm-lease-manager/: 0001-Add-sd_notify-support.patch
